zokrates_cli/examples/compile_errors/generics/conflicting_functions.zok
def foo<N>(field[N] a) -> bool {
    return true;
}

def foo<P>(field[P] a) -> bool {
    return true;
}

def main() {
    return;
}
